--- a/src/index.css
+++ b/src/index.css
@@ -21,17 +21,9 @@ input {
 
 
 .card {
-  align-content: center;
-  border: 1px solid gray;
-  border-radius: 6px;
-  overflow: hidden;
-  margin-bottom: 10px;
-  margin-right: 10px;
-}
-
-.card p {
-  padding: 5px;
-  text-align: 5px;
+  width: 18rem;
+  margin: 10px;
+  align-items: center;
 }
 
 .card img {
